@@ -14,18 +14,19 @@
         }
         h3 {
             font-family: 'Audiowide';
-            letter-spacing: 2px;
-            opacity: 0.95;
+            /*! letter-spacing: 2px; */
+            /*! opacity: 0.95; */
+            text-align: left;
         }
         .row-left {
-            opacity: 0.78;
             letter-spacing: 1px;
             padding-right: 32px;
             padding-left: 4px;
             font-family: 'Bitstream Vera Sans Mono', "Courier", "Courier New", monospace;
             font-size: 14px;
-            background-color: rgba(255,255,255,0.2);
+            background-color: rgba(255,255,255,0.1);
             letter-spacing: 0.15px;
+            color: rgba(255,255,255,0.8);
         }
         .row-right {
             width: 100%;
@@ -33,7 +34,7 @@
         }
         tr {
             height: 26px;
-            box-shadow: 0px 1px 0px rgba(255,255,255,0.15);
+            box-shadow: 0px 1px 0px rgba(255,255,255,0.1);
         }
         .info-circle {
             opacity: 0.9;
@@ -52,11 +53,11 @@
     <div class="pageTitle"><h1>about</h1></div>
     <center>
         <div class="container">
-            <div style="width: 300px; height: 800px; margin-left: -46px;margin-right: -32px;">
+            <div class="navigation">
                 <div style="perspective: 300px;">
                     <div class="sidebarItems">
                         <a href="newindex.html">home</a>
-                        <a href="about.html" id="selected-page" style="color: rgb(187, 194, 249);">about</a>
+                        <a href="about.html" id="selected-page" style="background-image: linear-gradient(to right, rgba(187, 194, 249,1), rgba(187, 194, 249,0.8));">about</a>
                         <a href="art.html">art</a>
                         <a href="blog.html">blog</a>
                         <a href="links.html">links</a>
@@ -64,10 +65,10 @@
                     </div>
                 </div>
             </div>
-            <div style="/* background-color: blue; */ min-width: 500px; flex: 1; max-width: 1200px; height: 800px; margin-top: 4px; display: block;">
+            <div class="container2">
                 <div style="/* background-color: grey; */ height: 400px; margin: 4px 0px; width: 100%; display:inline-flex; flex-wrap: wrap;/*! border-radius: 8px 8px 24px 24px; */">
                     
-                    <div style="/*! background-color: orange; */ flex: 1; height: 100%; margin: 4px; border-radius: 24px;background-image: linear-gradient(to bottom, rgba(103, 123, 202, 0.71), rgba(62, 76, 94, 0.45), rgba(23, 21, 30, 0.58), rgba(30, 31, 38, 0.57), rgba(15, 17, 17, 0.31));/*! box-shadow: 0px 2.2px 3px inset rgba(255, 255, 255, 0.18), 0px -1.2px 1.5px inset rgba(255, 255, 255, 0.29); */width: 100%;backdrop-filter: blur(16px);-webkit-backdrop-filter: blur(16px);padding: 16px 0px;outline: 2px solid rgba(255,255,255,0.2);">
+                    <div style="/*! background-color: orange; */ flex: 1; height: 100%; margin: 4px; border-radius: 24px;background-image: linear-gradient(to bottom, rgba(103, 123, 202, 0.71), rgba(62, 76, 94, 0.45), rgba(23, 21, 30, 0.58), rgba(30, 31, 38, 0.57), rgba(15, 17, 17, 0.31));/*! box-shadow: 0px 2.2px 3px inset rgba(255, 255, 255, 0.18), 0px -1.2px 1.5px inset rgba(255, 255, 255, 0.29); */width: 100%;backdrop-filter: blur(80px);-webkit-backdrop-filter: blur(16px);padding: 16px 0px;outline: 2px solid rgba(255, 255, 255, 0.2);">
                         <div style="height:376px;overflow: scroll;padding: 8px 36px;margin: 4px 2px;"><div style="display: flex; vertical-align: middle;justify-content: left;width: 100%;"><img src="profile.png" style="padding: 0px 2px;margin-right: 6px;" title="Icon featuring my sona, Motta" height="64" width="64"><p style="max-width: 780px; float: right;margin: -2px;text-align: left;">Hi, I'm Kos (or Georgios or Crex), this is my website. It acts as a hub for the things I create and share online, with some of these things being exclusive to the site. Not sure what else I could say about it, really, hope you like it! Below are some details about me.</p></div><br> <table style="text-align: left;">
   <tbody><tr style="display: none;">
     <th> </th>
@@ -103,11 +104,7 @@
     
   </tr>
 </tbody></table> <br><h3>favourites</h3><table style="text-align: left;">
-  <tbody><tr style="display: none;">
-    <th> </th>
-    <th> </th>
-    
-  </tr>
+  <tbody>
   <tr>
     <td class="row-left">COLOUR</td>
     <td class="row-right">Blue</td>
@@ -124,31 +121,19 @@
     <td class="row-right">Nintendo 3DS</td>
     
   </tr><tr style="/*! display: none; */">
-    <td class="row-left">GAME</td>
-    <td class="row-right">Super Mario Odyssey</td>
+    <td class="row-left">GAMES</td>
+    <td class="row-right">Super Mario Odyssey, Deltarune, Splatoon 3</td>
     
   </tr>
 <tr>
     <td class="row-left">POKÉMON</td>
-    <td class="row-right">Spheal, Smeargle, Zangoose, Rowlet, Garchomp, Grovyle</td>
-    
-  </tr><tr>
-    <td class="row-left">SEASON</td>
-    <td class="row-right">Spring</td>
+    <td class="row-right">Flygon, Spheal, Smeargle, Zangoose, Rowlet</td>
     
   </tr>
 </tbody></table><br><h3>what i use</h3>
 <table style="text-align: left;">
-  <tbody><tr style="display: none;">
-    <th> </th>
-    <th> </th>
-    
-  </tr>
-  <tr>
-    <td class="row-left">OPERATING SYSTEM</td>
-    <td class="row-right">macOS<span style="display:inline-flex; align-items: center;"><span title="Also used KDE Neon for a while, and have used Windows a lot too" class="info-circle">i</span></span></td>
-    
-  </tr>
+  <tbody>
+  
   
 <tr>
     <td class="row-left">BROWSER</td>
@@ -156,10 +141,10 @@
     
   </tr><tr>
     <td class="row-left">DRAWING TABLET</td>
-    <td class="row-right"><span style="display:inline-flex; align-items: center;">Wacom Intuos Pro S<span class="info-circle" style="margin-right:16px;" title="Previously used Wacom Bamboo CTL-460">i</span>/ iPad (6th gen)</span></td>
+    <td class="row-right"><span style="display:inline-flex; align-items: center;">Wacom Intuos Pro S<span class="info-circle" style="margin-right:16px;" title="Previously used Wacom Bamboo CTL-460">i</span></span></td>
     
   </tr><tr style="/*! display: none; */">
-    <td class="row-left">DRAWING APP</td>
+    <td class="row-left">ART SOFTWARE</td>
     <td class="row-right">Krita</td>
     
   </tr><tr>
@@ -168,7 +153,7 @@
     
   </tr>
 </tbody></table>
-<br><h3>extras</h3><ul style="text-align: left;"><li>Other things I'm interested in but don't engage in very much: Cooking, emulation, astronomy, photography</li><li>I made a Hackintosh a few years ago - have mostly stopped using it though</li><li>I used to use Scratch (scratch.mit.edu) a lot</li><li>I have about 50 digits of Pi memorised</li><li>Languages I know the best besides English are Spanish and German, still pretty beginner level though</li><li>Studying Computer Science at university currently</li></ul></div>
+<br></div>
                         
                     </div>
                 </div>
