@@ -43,20 +43,20 @@
 
 	<div class="pageTitle"><h1>art</h1></div>
     <center>
-        <div class="container" style="/*! display:flex; */ /*! flex-direction: row; */">
-            <div style="width: 300px; height: 800px; margin-left: -46px;margin-right: -32px;">
+        <div class="container">
+            <div class="navigation">
                 <div style="perspective: 300px;">
                     <div class="sidebarItems">
                         <a href="newindex.html">home</a>
                         <a href="about.html">about</a>
-                        <a href="art.html" id="selected-page" style="color: rgb(242, 165, 165);">art</a>
+                        <a href="art.html" id="selected-page" style="background-image: linear-gradient(to right, rgba(242, 165, 165, 1), rgba(242, 165, 165, 0.8));">art</a>
                         <a href="blog.html">blog</a>
                         <a href="links.html">links</a>
                         <a href="extras.html">extras</a>
                     </div>
                 </div>
             </div>
-            <div>
+            <div class="container2">
                 <div style="background-color: rgba(121, 121, 121, 0.2); min-width: 500px; max-width: 1200px; /*! height: 800px; */ margin-top: 4px; display: block;box-shadow: 0px 2.2px 3px inset rgba(255, 255, 255, 0.18), 0px -1.2px 1.5px inset rgba(255, 255, 255, 0.29);height: 300px;/*! overflow: scroll; */clip-path: polygon(0px 2%, 5% 0px, 95% 0px, 100% 2%, 100.00% 98%, 95% 100%, 5% 100%, 0% 98%);/*! outline: 8px solid rgba(255,255,255,0.1); *//*! border-radius: 20px; */">
 	                <br>
 					<div style="height: 260px; overflow: scroll; padding-top:8px;">
@@ -93,5 +93,6 @@
             </div>
         </div>
     </center>
+
 
 </body></html>
